--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "caffeinated/shinobi": "^5.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
         "laravelcollective/html": "^6.0"
