--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "s-ichikawa/laravel-sendgrid-driver": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
