--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
         "laravelcollective/html": "^6.0",
+        "realrashid/sweet-alert": "^3.0",
         "s-ichikawa/laravel-sendgrid-driver": "^2.1"
     },
     "require-dev": {
